<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/routMainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/SmallFontTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_medium"
            android:singleLine="true"
            android:text="@string/lbl_pick_up_note"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText" />

        <EditText
            android:id="@+id/edtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/img_edit_text_bg"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="top"
            android:hint="@string/hint_enter_pick_up_note"
            android:lines="3"
            android:paddingStart="@dimen/_12sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_11ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16ssp"
            android:layout_marginBottom="@dimen/_15sdp">

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/img_dashboard_button_bg"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:padding="@dimen/_11ssp"
                android:text="@string/lbl_cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/txtSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/img_dashboard_button_solid_bg"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:padding="@dimen/_11ssp"
                android:text="@string/lbl_submit"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

    </LinearLayout>
</layout>


