<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/routMainView"
        android:layout_width="match_parent"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/SmallFontTextView"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/lbl_select_time"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/VerySmallFontTextView"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/lbl_from_time"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText" />

                <EditText
                    android:id="@+id/edtFromTime"
                    style="@style/VerySmallFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_dropdown_bg"
                    android:drawableEnd="@drawable/ic_arrow_drop_down"
                    android:focusable="false"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/dash_sign"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:textColor="@color/colorPrimaryText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/VerySmallFontTextView"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/lbl_to_time"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryText" />

                <EditText
                    android:id="@+id/edtToTime"
                    style="@style/VerySmallFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_dropdown_bg"
                    android:drawableEnd="@drawable/ic_arrow_drop_down"
                    android:focusable="false"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/dash_sign"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:textColor="@color/colorPrimaryText" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>


